--- a/style.css
+++ b/style.css
@@ -6,5 +6,15 @@
 }
 .cabecalho{
     background-color:var(--cor-fundo);
-    color: var(--cor-fontes)
+    color: var(--cor-fontes);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
+}
+.imagem-cabecalho{width: 10%;}
+.itemlistadecabecalho{
+   display: inline-block;
+   margin: 0 16px;
+   font-size: 24px;
 }
