--- a/style.css
+++ b/style.css
@@ -12,9 +12,15 @@
     align-items: center;
     padding: 24px 0;
 }
-.imagem-cabecalho{width: 10%;}
+.imagem-cabecalho{width: 10%;
+}
 .itemlistadecabecalho{
    display: inline-block;
    margin: 0 16px;
    font-size: 24px;
+}
+.lista-cabecalho{
+    display: inline-block;
+    margin: 0 20px;
+    font-size: 30px;
 }
