--- a/style.css
+++ b/style.css
@@ -35,4 +35,6 @@
     background-image: linear-gradient(#960000,#54AED4);
     color: #FFFFFF;
     display: flex;
+    align-items: center;
+    padding: 24px 0;
 }
