--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     color: #FFFFFF;
     display: flex;
     align-items: center;
-    padding: 24px 0;
+    padding: 24px 16px;
 }
 .escola-div-conteudo{
     width: 35%;
