--- a/style.css
+++ b/style.css
@@ -59,4 +59,6 @@
 .estudante-todos{
     display: grid;
    grid-template-columns:20% 20% 20% 20% 20%;
+   align-items: center;
+   margin-left: 20px;
 }
