--- a/style.css
+++ b/style.css
@@ -59,6 +59,12 @@
 .estudante-todos{
     display: grid;
    grid-template-columns:20% 20% 20% 20% 20%;
-   align-items: center;
-   margin-left: 20px;
+ 
+}
+.etudante-titulo{
+text-align: center;
+padding: 50px 0;
+}
+.estudante{
+    background-color: #54AED4;
 }
