--- a/style.css
+++ b/style.css
@@ -61,10 +61,10 @@
    grid-template-columns:20% 20% 20% 20% 20%;
  
 }
-.etudante-titulo{
+.estudante-titulo{
 text-align: center;
 padding: 50px 0;
 }
 .estudante{
-    background-color: #54AED4;
+    background-color: #52acd3;
 }
