--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ padding: 50px 0;
 .estudante{
     background-color: #4aadd8;
 }
+.rodape{
+    background-color: black;
+    text-align: center;
+}
 .rodape-imagem{
     height: 60px;
     padding: 12px 0;
